[gd_scene load_steps=6 format=2]

[ext_resource path="res://Escenas/Tronco/Tronco.gd" type="Script" id=1]
[ext_resource path="res://Asset/Mapa11/tronco.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 15.4609

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="CircleShape2D" id=3]
radius = 8.09178

[node name="Tronco" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.630264, 13.2353 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 16.6785, 18.5317 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -16.5116, -34.6219 )
shape = SubResource( 2 )

[node name="AreaTronco" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaTronco"]
position = Vector2( -18.7488, -1.22943 )
shape = SubResource( 3 )

[node name="AreaTronco2" type="Area2D" parent="."]
position = Vector2( 36.8829, 2.1515 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaTronco2"]
position = Vector2( -18.7488, -1.22943 )
shape = SubResource( 3 )
[connection signal="area_entered" from="AreaTronco" to="." method="_on_AreaTronco_area_entered"]
[connection signal="body_entered" from="AreaTronco" to="." method="_on_AreaTronco_body_entered"]
[connection signal="area_entered" from="AreaTronco2" to="." method="_on_AreaTronco2_area_entered"]
[connection signal="body_entered" from="AreaTronco2" to="." method="_on_AreaTronco_body_entered"]
